--- a/.github/workflows/SuperBuild.yml
+++ b/.github/workflows/SuperBuild.yml
@@ -24,6 +24,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install ninja
+        python -m pip install cibuildwheel==1.7.1
         
     - name: Run SuperBuild
       run: |
@@ -43,6 +44,8 @@ jobs:
       run: | 
         cd ..
         cd build/SimpleITK-build/Wrapping/Python
+        python -m cibuildwheel --output-dir wheelhouse
+        cd wheelhouse
         ls    
         
     - name: Check Results R
