--- a/.github/workflows/SuperBuild.yml
+++ b/.github/workflows/SuperBuild.yml
@@ -50,9 +50,16 @@ jobs:
         cd ..
         cd build/SimpleITK-build/Wrapping/R
         ls
+    
+    - name: Prepare Artifacts
+      shell: bash
+      run: |
+        mkdir uploads
+        mv build/SimpleITK-build/Wrapping/R uploads
+        mv build/SimpleITK-build/Wrapping/Python uploads
         
     - name: Publish Artifacts
       uses: actions/upload-artifact@v2
       with: 
         name: WrappingRPython
-        path: build/SimpleITK-build/Wrapping/
+        path: uploads
