--- a/.github/workflows/SuperBuild.yml
+++ b/.github/workflows/SuperBuild.yml
@@ -32,6 +32,7 @@ jobs:
         cd build
         cmake ../SimpleElastix/SuperBuild
         make -j4
+        make -C SimpleITK-build dist
         
     - name: Check Results
       run: | 
@@ -56,8 +57,7 @@ jobs:
       run: |
         mkdir uploads
         cd ..
-        mv build/SimpleITK-build/Wrapping/R SimpleElastix/uploads
-        mv build/SimpleITK-build/Wrapping/Python SimpleElastix/uploads
+        mv build/SimpleITK-build/Wrapping/Python/dist SimpleElastix/uploads
         
     - name: Publish Artifacts
       uses: actions/upload-artifact@v2
