--- a/.github/workflows/SuperBuildPython.yml
+++ b/.github/workflows/SuperBuildPython.yml
@@ -1,66 +1,52 @@
 name: Elastix
 
 on: [push, pull_request]
-  
+
 jobs:
   build:
-    
+
     runs-on: ubuntu-18.04
 
     steps:
     - uses: actions/checkout@v2
-    
-    - name: Set up Python 3.7
+
+    - name: Set up Python 3.8
       uses: actions/setup-python@v1
       with:
-        python-version: 3.7
-        
-    - name: Set up R
-      uses: r-lib/actions/setup-r@v1
-      with:
-        r-version: '3.5.3'
-       
+        python-version: 3.8
+
     - name: Install build dependencies
       run: |
         python -m pip install --upgrade pip
         python -m pip install ninja
-        
-    - name: Run SuperBuild
-      run: |
-        cd ..
-        mkdir build
-        cd build
-        cmake ../SimpleElastix/SuperBuild
-        make -j4
-        make -C SimpleITK-build dist
-        
+
+    - name: Build manylinux Python wheels
+      uses: ViktorvdValk/python-wheels-manylinux-build@SimpleElastixWheel
+      with:
+        python-versions: 'cp36-cp36m cp37-cp37m'
+        build-requirements: 'ninja'
+
     - name: Check Results
-      run: | 
+      run: |
         cd ..
         cd build/SimpleITK-build/Wrapping
         ls
-        
+
     - name: Check Results Python
-      run: | 
+      run: |
         cd ..
         cd build/SimpleITK-build/Wrapping/Python
-        ls    
-        
-    - name: Check Results R
-      run: | 
-        cd ..
-        cd build/SimpleITK-build/Wrapping/R
         ls
-    
+
     - name: Prepare Artifacts
       shell: bash
       run: |
         mkdir uploads
         cd ..
         mv build/SimpleITK-build/Wrapping/Python/dist SimpleElastix/uploads
-        
+
     - name: Publish Artifacts
       uses: actions/upload-artifact@v2
-      with: 
-        name: WrappingRPython
+      with:
+        name: PythonManyLinux
         path: uploads
