--- a/.github/workflows/SuperBuildPython.yml
+++ b/.github/workflows/SuperBuildPython.yml
@@ -24,7 +24,7 @@ jobs:
       uses: ViktorvdValk/python-wheels-manylinux-build@SimpleElastixWheel
       with:
         python-versions: 'cp36-cp36m cp37-cp37m'
-        build-requirements: 'ninja'
+        build-requirements: 'ninja cmake'
 
     - name: Check Results
       run: |
