--- a/.github/workflows/SuperBuildPython.yml
+++ b/.github/workflows/SuperBuildPython.yml
@@ -3,9 +3,30 @@ name: Elastix
 on: [push, pull_request]
 
 jobs:
-  build:
+  setup-environment:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      max-parallel: 3
+      matrix:
+        os: [ubuntu-18.04, macos-10.15]
 
+    steps:
+    - uses: actions/checkout@v1
+
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.8
+
+    - name: Install build dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install ninja
+
+  build-wheel-linux:
     runs-on: ubuntu-18.04
+    strategy:
+      max-parallel: 2
 
     steps:
     - uses: actions/checkout@v2
@@ -23,8 +44,48 @@ jobs:
     - name: Build manylinux Python wheels
       uses: ViktorvdValk/python-wheels-manylinux-build@SimpleElastixWheel
       with:
-        python-versions: 'cp36-cp36m cp37-cp37m'
+        python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38m'
         build-requirements: 'ninja cmake'
+
+    - name: Prepare Artifacts Linux
+      shell: bash
+      run: |
+        mkdir uploads
+        cd ..
+        mv build/SimpleITK-build/Wrapping/Python/dist SimpleElastix/uploads
+
+    - name: Publish Artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: LinuxWheels
+        path: uploads
+
+  build-wheel-macos:
+    runs-on: macos-10.15
+    strategy:
+      max-parallel: 2
+      matrix:
+        python-version: [3.6, 3.7, 3.8]
+
+    - name: Set up Python
+      uses: actions/setup-python@v1
+      with:
+        python-version: ${{ matrix.python-version }}
+
+    - name: Install build dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install ninja
+
+    - name: Build MacOs Python wheels
+      run: |
+        export MACOSX_DEPLOYMENT_TARGET=10.9
+        cd ..
+        mkdir build
+        cd build
+        cmake ../SimpleElastix/SuperBuild
+        make -j4
+        make -C SimpleITK-build dist
 
     - name: Check Results
       run: |
@@ -48,5 +109,5 @@ jobs:
     - name: Publish Artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: PythonManyLinux
+        name: MacOsWheels${{ matrix.python-version }}
         path: uploads
