--- a/.github/workflows/SuperBuildPython.yml
+++ b/.github/workflows/SuperBuildPython.yml
@@ -3,54 +3,109 @@ name: Build_Wheels
 on: [push, pull_request]
 
 jobs:
-  build-wheels-linux:
-    runs-on: ubuntu-18.04
-    strategy:
-      max-parallel: 2
+  # build-wheels-linux:
+  #   runs-on: ubuntu-18.04
+  #   strategy:
+  #     max-parallel: 2
+  #
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #
+  #   - name: Set up Python 3.8
+  #     uses: actions/setup-python@v1
+  #     with:
+  #       python-version: 3.8
+  #
+  #   - name: Install build dependencies
+  #     run: |
+  #       python -m pip install --upgrade pip
+  #       python -m pip install ninja
+  #
+  #   - name: Build manylinux Python wheels
+  #     uses: ViktorvdValk/python-wheels-manylinux-build@SimpleElastixWheel
+  #     with:
+  #       python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38m'
+  #       build-requirements: 'ninja cmake'
+  #
+  #   - name: Prepare Artifacts Linux
+  #     shell: bash
+  #     run: |
+  #       mkdir uploads
+  #       cd ..
+  #       versions='cp36-cp36m cp37-cp37m cp38-cp38m'
+  #       for version in $versions
+  #       do
+  #       mkdir uploads/$version
+  #       mv $version/SimpleITK-build/Wrapping/Python/dist SimpleElastix/uploads/$version
+  #       done
+  #
+  #   - name: Publish Artifacts
+  #     uses: actions/upload-artifact@v2
+  #     with:
+  #       name: LinuxWheels
+  #       path: uploads
 
-    steps:
-    - uses: actions/checkout@v2
+  # build-wheel-macos:
+  #   runs-on: macos-10.15
+  #   strategy:
+  #     max-parallel: 2
+  #     matrix:
+  #       python-version: [3.6, 3.7, 3.8]
+  #
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #
+  #   - name: Set up Python
+  #     uses: actions/setup-python@v1
+  #     with:
+  #       python-version: ${{ matrix.python-version }}
+  #
+  #   - name: Install build dependencies
+  #     run: |
+  #       python -m pip install --upgrade pip
+  #       python -m pip install ninja
+  #
+  #   - name: Build MacOs Python wheels
+  #     run: |
+  #       export MACOSX_DEPLOYMENT_TARGET=10.9
+  #       cd ..
+  #       mkdir build
+  #       cd build
+  #       cmake ../SimpleElastix/SuperBuild
+  #       make -j4
+  #       make -C SimpleITK-build dist
+  #
+  #   - name: Check Results
+  #     run: |
+  #       cd ..
+  #       cd build/SimpleITK-build/Wrapping
+  #       ls
+  #
+  #   - name: Check Results Python
+  #     run: |
+  #       cd ..
+  #       cd build/SimpleITK-build/Wrapping/Python
+  #       ls
+  #
+  #   - name: Prepare Artifacts
+  #     shell: bash
+  #     run: |
+  #       mkdir uploads
+  #       cd ..
+  #       mv build/SimpleITK-build/Wrapping/Python/dist SimpleElastix/uploads
+  #
+  #   - name: Publish Artifacts
+  #     uses: actions/upload-artifact@v2
+  #     with:
+  #       name: MacOsWheels${{ matrix.python-version }}
+  #       path: uploads
 
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.8
-
-    - name: Install build dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install ninja
-
-    - name: Build manylinux Python wheels
-      uses: ViktorvdValk/python-wheels-manylinux-build@SimpleElastixWheel
-      with:
-        python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38m'
-        build-requirements: 'ninja cmake'
-
-    - name: Prepare Artifacts Linux
-      shell: bash
-      run: |
-        mkdir uploads
-        cd ..
-        versions='cp36-cp36m cp37-cp37m cp38-cp38m'
-        for version in $versions
-        do
-        mkdir uploads/$version
-        mv $version/SimpleITK-build/Wrapping/Python/dist SimpleElastix/uploads/$version
-        done
-
-    - name: Publish Artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: LinuxWheels
-        path: uploads
-
-  build-wheel-macos:
-    runs-on: macos-10.15
-    strategy:
-      max-parallel: 2
-      matrix:
-        python-version: [3.6, 3.7, 3.8]
+ build-wheel-windows:
+   runs-on: windows-2019
+   strategy:
+     max-parallel: 2
+     matrix:
+       python-version: [3.6, 3.7, 3.8]
 
     steps:
     - uses: actions/checkout@v2
@@ -65,15 +120,15 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install ninja
 
-    - name: Build MacOs Python wheels
+    - name: Build Windows Python wheels
       run: |
-        export MACOSX_DEPLOYMENT_TARGET=10.9
+        call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
         cd ..
         mkdir build
         cd build
         cmake ../SimpleElastix/SuperBuild
-        make -j4
-        make -C SimpleITK-build dist
+        msbuild /p:configuration=release ALL_BUILD.vcxproj
+        ls
 
     - name: Check Results
       run: |
@@ -86,16 +141,16 @@ jobs:
         cd ..
         cd build/SimpleITK-build/Wrapping/Python
         ls
-
-    - name: Prepare Artifacts
-      shell: bash
-      run: |
-        mkdir uploads
-        cd ..
-        mv build/SimpleITK-build/Wrapping/Python/dist SimpleElastix/uploads
-
-    - name: Publish Artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: MacOsWheels${{ matrix.python-version }}
-        path: uploads
+    #
+    # - name: Prepare Artifacts
+    #   shell: bash
+    #   run: |
+    #     mkdir uploads
+    #     cd ..
+    #     mv build/SimpleITK-build/Wrapping/Python/dist SimpleElastix/uploads
+    #
+    # - name: Publish Artifacts
+    #   uses: actions/upload-artifact@v2
+    #   with:
+    #     name: WindowsWheels${{ matrix.python-version }}
+    #     path: uploads
