--- a/.github/workflows/SuperBuildPython.yml
+++ b/.github/workflows/SuperBuildPython.yml
@@ -45,102 +45,102 @@ jobs:
   #       name: LinuxWheels
   #       path: uploads
 
-  # build-wheel-macos:
-  #   runs-on: macos-10.15
-  #   strategy:
-  #     max-parallel: 2
-  #     matrix:
-  #       python-version: [3.6, 3.7, 3.8]
-  #
-  #   steps:
-  #   - uses: actions/checkout@v2
-  #
-  #   - name: Set up Python
-  #     uses: actions/setup-python@v1
-  #     with:
-  #       python-version: ${{ matrix.python-version }}
-  #
-  #   - name: Install build dependencies
-  #     run: |
-  #       python -m pip install --upgrade pip
-  #       python -m pip install ninja
-  #
-  #   - name: Build MacOs Python wheels
-  #     run: |
-  #       export MACOSX_DEPLOYMENT_TARGET=10.9
-  #       cd ..
-  #       mkdir build
-  #       cd build
-  #       cmake ../SimpleElastix/SuperBuild
-  #       make -j4
-  #       make -C SimpleITK-build dist
-  #
-  #   - name: Check Results
-  #     run: |
-  #       cd ..
-  #       cd build/SimpleITK-build/Wrapping
-  #       ls
-  #
-  #   - name: Check Results Python
-  #     run: |
-  #       cd ..
-  #       cd build/SimpleITK-build/Wrapping/Python
-  #       ls
-  #
-  #   - name: Prepare Artifacts
-  #     shell: bash
-  #     run: |
-  #       mkdir uploads
-  #       cd ..
-  #       mv build/SimpleITK-build/Wrapping/Python/dist SimpleElastix/uploads
-  #
-  #   - name: Publish Artifacts
-  #     uses: actions/upload-artifact@v2
-  #     with:
-  #       name: MacOsWheels${{ matrix.python-version }}
-  #       path: uploads
+  build-wheel-macos:
+    runs-on: macos-10.15
+    strategy:
+      max-parallel: 2
+      matrix:
+        python-version: [3.6, 3.7, 3.8]
 
- build-wheel-windows:
-   runs-on: windows-2019
-   strategy:
-     max-parallel: 2
-     matrix:
-       python-version: [3.6, 3.7, 3.8]
+    steps:
+    - uses: actions/checkout@v2
 
-  steps:
-  - uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v1
+      with:
+        python-version: ${{ matrix.python-version }}
 
-  - name: Set up Python
-    uses: actions/setup-python@v1
-    with:
-      python-version: ${{ matrix.python-version }}
+    - name: Install build dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install ninja
 
-  - name: Install build dependencies
-    run: |
-      python -m pip install --upgrade pip
-      python -m pip install ninja
+    - name: Build MacOs Python wheels
+      run: |
+        export MACOSX_DEPLOYMENT_TARGET=10.9
+        cd ..
+        mkdir build
+        cd build
+        cmake ../SimpleElastix/SuperBuild
+        make -j4
+        make -C SimpleITK-build dist
 
-  - name: Build Windows Python wheels
-    run: |
-      call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
-      cd ..
-      mkdir build
-      cd build
-      cmake ../SimpleElastix/SuperBuild
-      msbuild /p:configuration=release ALL_BUILD.vcxproj
-      ls
+    - name: Check Results
+      run: |
+        cd ..
+        cd build/SimpleITK-build/Wrapping
+        ls
 
-  - name: Check Results
-    run: |
-      cd ..
-      cd build/SimpleITK-build/Wrapping
-      ls
+    - name: Check Results Python
+      run: |
+        cd ..
+        cd build/SimpleITK-build/Wrapping/Python
+        ls
 
-  - name: Check Results Python
-    run: |
-      cd ..
-      cd build/SimpleITK-build/Wrapping/Python
-      ls
+    - name: Prepare Artifacts
+      shell: bash
+      run: |
+        mkdir uploads
+        cd ..
+        mv build/SimpleITK-build/Wrapping/Python/dist SimpleElastix/uploads
+
+    - name: Publish Artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: MacOsWheels${{ matrix.python-version }}
+        path: uploads
+
+  build-wheel-windows:
+    runs-on: windows-2019
+    strategy:
+      max-parallel: 2
+      matrix:
+        python-version: [3.6, 3.7, 3.8]
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v1
+      with:
+        python-version: ${{ matrix.python-version }}
+
+        - name: Install build dependencies
+        run: |
+        python -m pip install --upgrade pip
+        python -m pip install ninja
+
+    - name: Build Windows Python wheels
+      run: |
+        call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
+        cd ..
+        mkdir build
+        cd build
+        cmake ../SimpleElastix/SuperBuild
+        msbuild /p:configuration=release ALL_BUILD.vcxproj
+        ls
+
+    - name: Check Results
+      run: |
+        cd ..
+        cd build/SimpleITK-build/Wrapping
+        ls
+
+    - name: Check Results Python
+      run: |
+        cd ..
+        cd build/SimpleITK-build/Wrapping/Python
+        ls
     #
     # - name: Prepare Artifacts
     #   shell: bash
