--- a/.github/workflows/SuperBuildPython.yml
+++ b/.github/workflows/SuperBuildPython.yml
@@ -3,47 +3,47 @@ name: Build_Wheels
 on: [push, pull_request]
 
 jobs:
-  # build-wheels-linux:
-  #   runs-on: ubuntu-18.04
-  #   strategy:
-  #     max-parallel: 2
-  #
-  #   steps:
-  #   - uses: actions/checkout@v2
-  #
-  #   - name: Set up Python 3.8
-  #     uses: actions/setup-python@v1
-  #     with:
-  #       python-version: 3.8
-  #
-  #   - name: Install build dependencies
-  #     run: |
-  #       python -m pip install --upgrade pip
-  #       python -m pip install ninja
-  #
-  #   - name: Build manylinux Python wheels
-  #     uses: ViktorvdValk/python-wheels-manylinux-build@SimpleElastixWheel
-  #     with:
-  #       python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38m'
-  #       build-requirements: 'ninja cmake'
-  #
-  #   - name: Prepare Artifacts Linux
-  #     shell: bash
-  #     run: |
-  #       mkdir uploads
-  #       cd ..
-  #       versions='cp36-cp36m cp37-cp37m cp38-cp38m'
-  #       for version in $versions
-  #       do
-  #       mkdir uploads/$version
-  #       mv $version/SimpleITK-build/Wrapping/Python/dist SimpleElastix/uploads/$version
-  #       done
-  #
-  #   - name: Publish Artifacts
-  #     uses: actions/upload-artifact@v2
-  #     with:
-  #       name: LinuxWheels
-  #       path: uploads
+  build-wheels-linux:
+    runs-on: ubuntu-18.04
+    strategy:
+      max-parallel: 2
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.8
+
+    - name: Install build dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install ninja
+
+    - name: Build manylinux Python wheels
+      uses: ViktorvdValk/python-wheels-manylinux-build@SimpleElastixWheel
+      with:
+        python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38m'
+        build-requirements: 'ninja cmake'
+
+    - name: Prepare Artifacts Linux
+      shell: bash
+      run: |
+        mkdir uploads
+        cd ..
+        versions='cp36-cp36m cp37-cp37m cp38-cp38m'
+        for version in $versions
+        do
+        mkdir uploads/$version
+        mv $version/SimpleITK-build/Wrapping/Python/dist SimpleElastix/uploads/$version
+        done
+
+    - name: Publish Artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: LinuxWheels
+        path: uploads
 
   # build-wheel-macos:
   #   runs-on: macos-10.15
@@ -140,18 +140,28 @@ jobs:
     - name: Check Results Python
       run: |
         cd ..
-        cd build/SimpleITK-build/Wrapping/Python
+        cd build/SimpleITK-build/Wrapping/Python/dist
         ls
-    #
-    # - name: Prepare Artifacts
-    #   shell: bash
-    #   run: |
-    #     mkdir uploads
-    #     cd ..
-    #     mv build/SimpleITK-build/Wrapping/Python/dist SimpleElastix/uploads
-    #
-    # - name: Publish Artifacts
-    #   uses: actions/upload-artifact@v2
-    #   with:
-    #     name: WindowsWheels${{ matrix.python-version }}
-    #     path: uploads
+
+    - name: Build Wheel Package
+      run: |
+        call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
+        cd ..
+        cd build/SimpleITK-build/Wrapping/Python
+        msbuild PACKAGE.vcxproj
+      shell: cmd
+
+
+
+    - name: Prepare Artifacts
+      shell: bash
+      run: |
+        mkdir uploads
+        cd ..
+        mv build/SimpleITK-build/Wrapping/Python/dist SimpleElastix/uploads
+
+    - name: Publish Artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: WindowsWheels${{ matrix.python-version }}
+        path: uploads
