--- a/.github/workflows/SuperBuildPython.yml
+++ b/.github/workflows/SuperBuildPython.yml
@@ -3,49 +3,49 @@ name: Build_Wheels
 on: [push, pull_request]
 
 jobs:
-  # build-wheels-linux:
-  #   runs-on: ubuntu-18.04
-  #   strategy:
-  #     max-parallel: 2
-  #
-  #   steps:
-  #   - uses: actions/checkout@v2
-  #
-  #   - name: Set up Python 3.8
-  #     uses: actions/setup-python@v1
-  #     with:
-  #       python-version: 3.8
-  #
-  #   - name: Install build dependencies
-  #     run: |
-  #       python -m pip install --upgrade pip
-  #       python -m pip install ninja
-  #
-  #   - name: Build manylinux Python wheels
-  #     uses: ViktorvdValk/python-wheels-manylinux-build@SimpleElastixWheel
-  #     with:
-  #       python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38m'
-  #       build-requirements: 'ninja cmake'
-  #
-  #   - name: Prepare Artifacts Linux
-  #     shell: bash
-  #     run: |
-  #       mkdir uploads
-  #       cd ..
-  #       versions='cp36-cp36m cp37-cp37m cp38-cp38m'
-  #       for version in $versions
-  #       do
-  #       mkdir uploads/$version
-  #       mv $version/SimpleITK-build/Wrapping/Python/dist SimpleElastix/uploads/$version
-  #       done
-  #
-  #   - name: Publish Artifacts
-  #     uses: actions/upload-artifact@v2
-  #     with:
-  #       name: LinuxWheels
-  #       path: uploads
+  build-wheels-linux:
+    runs-on: ubuntu-18.04
+    strategy:
+      max-parallel: 2
 
-  build-wheel-macos:
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.8
+
+    - name: Install build dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install ninja
+
+    - name: Build manylinux Python wheels
+      uses: ViktorvdValk/python-wheels-manylinux-build@SimpleElastixWheel
+      with:
+        python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38m'
+        build-requirements: 'ninja cmake'
+
+    - name: Prepare Artifacts Linux
+      shell: bash
+      run: |
+        mkdir uploads
+        cd ..
+        versions='cp36-cp36m cp37-cp37m cp38-cp38m'
+        for version in $versions
+        do
+        mkdir uploads/$version
+        mv $version/SimpleITK-build/Wrapping/Python/dist SimpleElastix/uploads/$version
+        done
+
+    - name: Publish Artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: LinuxWheels
+        path: uploads
+
+  build-wheels-macos:
     runs-on: macos-10.15
     strategy:
       max-parallel: 3
@@ -101,68 +101,97 @@ jobs:
         name: MacOsWheels${{ matrix.python-version }}
         path: uploads
 
-  # build-wheel-windows:
-  #   runs-on: windows-2019
-  #   strategy:
-  #     max-parallel: 3
-  #     matrix:
-  #       python-version: [3.6, 3.7, 3.8]
-  #
-  #   steps:
-  #   - uses: actions/checkout@v2
-  #
-  #   - name: Set up Python
-  #     uses: actions/setup-python@v1
-  #     with:
-  #       python-version: ${{ matrix.python-version }}
-  #
-  #   - name: Install build dependencies
-  #     run: |
-  #       python -m pip install --upgrade pip
-  #       python -m pip install ninja
-  #
-  #   - name: Build Windows Python wheels
-  #     run: |
-  #       call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
-  #       cd ..
-  #       mkdir build
-  #       cd build
-  #       cmake ../SimpleElastix/SuperBuild
-  #       msbuild /p:configuration=release ALL_BUILD.vcxproj
-  #       dir
-  #     shell: cmd
-  #
-  #   - name: Check Results
-  #     run: |
-  #       cd ..
-  #       cd build/SimpleITK-build/Wrapping
-  #       ls
-  #
-  #   - name: Check Results Python
-  #     run: |
-  #       cd ..
-  #       cd build/SimpleITK-build/Wrapping/Python/dist
-  #       ls
-  #
-  #   - name: Build Wheel Package
-  #     run: |
-  #       call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
-  #       cd ..
-  #       cd build/SimpleITK-build/Wrapping/Python
-  #       msbuild PACKAGE.vcxproj
-  #     shell: cmd
-  #
-  #
-  #
-  #   - name: Prepare Artifacts
-  #     shell: bash
-  #     run: |
-  #       mkdir uploads
-  #       cd ..
-  #       mv build/SimpleITK-build/Wrapping/Python/dist SimpleElastix/uploads
-  #
-  #   - name: Publish Artifacts
-  #     uses: actions/upload-artifact@v2
-  #     with:
-  #       name: WindowsWheels${{ matrix.python-version }}
-  #       path: uploads
+
+  build-wheels-windows:
+    runs-on: windows-2019
+    strategy:
+      max-parallel: 3
+      matrix:
+        python-version: [3.6, 3.7, 3.8]
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v1
+      with:
+        python-version: ${{ matrix.python-version }}
+
+    - name: Install build dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install ninja
+
+    - name: Build Windows Python wheels
+      run: |
+        call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
+        cd ..
+        mkdir build
+        cd build
+        cmake ../SimpleElastix/SuperBuild
+        msbuild /p:configuration=release ALL_BUILD.vcxproj
+        dir
+      shell: cmd
+
+    - name: Check Results
+      run: |
+        cd ..
+        cd build/SimpleITK-build/Wrapping
+        ls
+
+    - name: Check Results Python
+      run: |
+        cd ..
+        cd build/SimpleITK-build/Wrapping/Python/dist
+        ls
+
+    - name: Build Wheel Package
+      run: |
+        call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
+        cd ..
+        cd build/SimpleITK-build/Wrapping/Python
+        msbuild PACKAGE.vcxproj
+      shell: cmd
+
+
+
+    - name: Prepare Artifacts
+      shell: bash
+      run: |
+        mkdir uploads
+        cd ..
+        mv build/SimpleITK-build/Wrapping/Python/dist SimpleElastix/uploads
+
+    - name: Publish Artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: WindowsWheels${{ matrix.python-version }}
+        path: uploads
+
+  publish-wheel-to-pyi:
+    needs:
+      - build-wheels-linux
+      - build-wheels-macos
+      - build-wheels-windows
+    runs-on: ubuntu-18.04
+
+    steps:
+    - name: Download Python Packages
+      uses: actions/download-artifact@v2
+
+    - name: Prepare packages for upload
+      run: |
+        ls -R
+        for d in */; do
+          mv ${d}/*.whl .
+        done
+        mkdir dist
+        mv *.whl dist/
+        ls dist
+
+    - name: Publish distribution 📦 to Test PyPI
+      uses: pypa/gh-action-pypi-publish@master
+      with:
+        user: __token__
+        password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+        repository_url: https://test.pypi.org/legacy/
