--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -81,7 +81,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install ninja
         ls
-        cd ${{ ITK_BUILD_DIR }}
+        cd ${{ matrix.ITK_BUILD_DIR }}
         ls
 
     - name: Get specific version of CMake, Ninja
